--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           стильний дизайн та висока якість обслуговування!
         </p>
         <img
-          src="/Images/baker-man.jpg"
+          src="./Images/baker-man.jpg"
           alt="Чоловік пекар дивиться на батони із посмішкою"
         />
       </section>
