--- a/Frontend-test/index.html
+++ b/Frontend-test/index.html
@@ -126,6 +126,8 @@
             </a>
           </li>
         </ul>
+        <a href="#">Політика конфіденційності</a>
+        <p>&copy; 2022 Дані захищені</p>
       </address>
     </footer>
   </body>
