--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <body>
     <header>
       <nav>
-        <a href="">
+        <a href="/">
           <img src="./Images/logo.svg" alt="Логотип Сучасної пекарені" />
         </a>
         <ul>
-          <li><a href="#">Франшиза</a></li>
-          <li><a href="#">Наші традиції</a></li>
-          <li><a href="#">Формати</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a href="#traditions-section">Наші традиції</a></li>
+          <li><a href="#chiefs-section">Шеф-кухарі</a></li>
+          <li><a href="#formats-section">Формати</a></li>
+          <li><a href="#contact-section">Контакти</a></li>
         </ul>
       </nav>
       <button type="submit">Замовити дзвінок</button>
@@ -25,7 +25,7 @@
       <section>
         <h1>Сучасна пекарня</h1>
       </section>
-      <section>
+      <section id="traditions-section">
         <ul>
           <li>Великий попит на ринку</li>
           <li>Доступні за бюджетом формати</li>
@@ -46,7 +46,7 @@
           alt="Чоловік пекар дивиться на батони із посмішкою"
         />
       </section>
-      <section>
+      <section id="chiefs-section">
         <h2>Наші найкращі шеф -кухарі</h2>
         <ul>
           <li>
@@ -70,7 +70,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section id="formats-section">
         <h2>Формати</h2>
         <ul>
           <li>
@@ -90,7 +90,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section id="contact-section">
         <h2>Приєднуйся до мережі пекарень</h2>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1634470361723!2d30.488698376829447!3d50.45668098691466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCAwMjAwMA!5e0!3m2!1sbg!2sua!4v1732645486220!5m2!1sbg!2sua"
@@ -107,8 +107,8 @@
         <img src="./Images/logo.svg" alt="Логотип Сучасної пекарені" />
       </a>
       <ul>
-        <li><a href="#">Франшиза</a></li>
         <li><a href="#">Наші традиції</a></li>
+        <li><a href="#">Шеф-кухарі</a></li>
         <li><a href="#">Формати</a></li>
         <li><a href="#">Контакти</a></li>
       </ul>
