--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сучасна пекарня</title>
+    <style>
+      h1 {
+        background-color: blueviolet;
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -23,7 +28,7 @@
     </header>
     <main>
       <section>
-        <h1>Сучасна пекарня</h1>
+        <h1 style="color: burlywood">Сучасна пекарня</h1>
       </section>
       <section id="traditions-section">
         <ul>
