--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         background-color: blueviolet;
       }
     </style>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <header>
