Add folder for styles.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         background-color: blueviolet;
       }
     </style>
-    <link rel="stylesheet" href=".css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
