Improve styles for button

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
           <li><a href="#contact-section">Контакти</a></li>
         </ul>
       </nav>
-      <button type="submit">Замовити дзвінок</button>
+      <button class="button" type="button">Замовити дзвінок</button>
       <!-- Button is here -->
     </header>
     <main>
       <section>
-        <h1 style="color: burlywood">Сучасна пекарня</h1>
+        <h1 class="main-title">Сучасна пекарня</h1>
       </section>
       <section id="traditions-section">
         <ul>
