Update styles for hero-title

--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сучасна пекарня</title>
-    <style>
-      h1 {
-        background-color: blueviolet;
-      }
-    </style>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -18,10 +13,12 @@
           <img src="./Images/logo.svg" alt="Логотип Сучасної пекарені" />
         </a>
         <ul>
-          <li><a href="#traditions-section">Наші традиції</a></li>
-          <li><a href="#chiefs-section">Шеф-кухарі</a></li>
-          <li><a href="#formats-section">Формати</a></li>
-          <li><a href="#contact-section">Контакти</a></li>
+          <li>
+            <a class="link" href="#traditions-section">Наші традиції</a>
+          </li>
+          <li><a class="link" href="#chiefs-section">Шеф-кухарі</a></li>
+          <li><a class="link" href="#formats-section">Формати</a></li>
+          <li><a class="link" href="#contact-section">Контакти</a></li>
         </ul>
       </nav>
       <button class="button" type="button">Замовити дзвінок</button>
@@ -29,7 +26,7 @@
     </header>
     <main>
       <section>
-        <h1 class="main-title">Сучасна пекарня</h1>
+        <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
       </section>
       <section id="traditions-section">
         <ul>
