--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         />
       </section>
       <section id="chiefs-section">
-        <h2 class="section-title">Наші найкращі шеф-кухарі</h2>
+        <h2 class="section-title">
+          Наші найкращі <span class="accent">шеф-кухарі</span>
+        </h2>
         <ul>
           <li>
             <article>
