--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@
       <section class="section" id="formats-section">
         <div class="container">
           <h2 class="formats-title section-title centered">Формати</h2>
+          <button class="carousel-button" type="button">
+            <svg width="16" height="16">
+              <use href="./Images/icons.svg#icon-arrow"></use>
+            </svg>
+          </button>
           <ul class="formats-list">
             <li class="formats-item">
               <article class="format-card">
@@ -151,6 +156,11 @@
               </article>
             </li>
           </ul>
+          <button class="carousel-button" type="button">
+            <svg width="16" height="16">
+              <use href="./Images/icons.svg#icon-arrow"></use>
+            </svg>
+          </button>
         </div>
       </section>
       <section class="section" id="contact-section">
@@ -201,11 +211,15 @@
                 >Україна, м. Київ, вул. Січових Стрільців 54
               </a>
             </li>
-            <!--Facebook icon-->
+            <svg class="address-icon" width="32" height="32">
+              <use href="./Images/icons.svg#icon-facebook"></use>
+            </svg>
             <li>
               <a href="#"> </a>
             </li>
-            <!--Istagram icon-->
+            <svg class="address-icon" width="32" height="32">
+              <use href="./Images/icons.svg#icon-instagram"></use>
+            </svg>
             <li>
               <a href="#"> </a>
             </li>
