--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             </ul>
           </nav>
           <!-- Button is here -->
-          <button class="button" type="button">Замовити дзвінок</button>
+          <button class="button modal-btn-open" type="button">
+            Замовити дзвінок
+          </button>
         </div>
       </div>
     </header>
@@ -75,14 +77,15 @@
       <section class="section" id="chefs-section">
         <div class="container">
           <h2 class="chefs-title section-title centered">
-            Наші найкращі <span class="accent">шеф-кухарі</span>
+            Наші найкращі <br />
+            <span class="accent">шеф-кухарі</span>
           </h2>
           <ul class="chefs-list">
             <li class="chefs-item">
               <article class="chef-card">
                 <img
                   class="chef-photo"
-                  src="/Images/nastya-chef.jpg"
+                  src="./Images/nastya-chef.jpg"
                   alt="Nastya-chef"
                 />
                 <div>
@@ -255,5 +258,12 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-btn-close" type="button">Close</button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
