Improved logo in header

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header-container">
           <nav class="header-nav">
             <a href="/">
-              <img src="/Images/logo.svg" alt="Логотип Сучасної пекарені" />
+              <img src="./Images/logo.svg" alt="Логотип Сучасної пекарені" />
             </a>
             <ul class="header-menu">
               <li>
