--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 </article>
               </li>
             </ul>
-            <button class="carousel-button" type="button">
+            <button class="carousel-button next" type="button">
               <svg width="16" height="16">
                 <use href="./Images/icons.svg#icon-arrow"></use>
               </svg>
@@ -260,12 +260,11 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-hidden">
       <div class="modal">
         <button class="modal-btn-close" type="button">Close</button>
       </div>
     </div>
-
     <script src="./js/modal.js"></script>
   </body>
 </html>
